<resources>
    <string name="app_name">Mess Management</string>
    <string name="splash_by_emon_raihan">Developed By Emon Raihan</string>
    <string name="company_name">Bank Asia Limited</string>
    <string name="company_name_witout_limited">Bank Asia</string>
    <string name="btn_login">Login</string>
    <string name="login_user_id">User ID</string>
    <string name="login_password">Password</string>
    <string name="hints_user_id">Enter Your User ID</string>
    <string name="hints_password">Enter Password</string>
    <string name="login_sub_tile">Login</string>
    <string name="welcome_welcome">Welcome</string>
    <string name="welcome_name">Enamul Haque</string>
    <string name="btn_tap_for_balance">Tap for balance</string>
    <string name="title_activity_welcome2">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_account">Account</string>
    <string name="title_setting">Settings</string>
    <string name="login_new_in_app">New in App</string>
    <string name="login_forget_pass"><u>Forgot Password</u></string>
    <string name="question_mark"> \?  </string>
    <string name="login_register_here"><u> Click to Register</u></string>
    <string name="title">Title</string>
    <string name="btn_proced">Proceed</string>
    <string name="select_source_account">Source Account</string>
    <string name="select_bill_type">Bill Type</string>
    <string name="select_bill_type_bangla">বিল টাইপ</string>
    <string name="select_destinaton_account">Select Destination Account</string>
    <string name="view_list">View List</string>
    <string name="add_beneficiary">Add Beneficiary</string>
    <string name="available_balance">Available Balance</string>
    <string name="zero">0.00 BDT</string>
    <string name="account">10162600</string>
    <string name="source_account_no">Source A/C No.</string>
    <string name="source_account_title">Source A/C Title</string>
    <string name="name">Enamul Haque</string>
    <string name="destination_account_no">Destination A/C No.</string>
    <string name="destination_account_title">Destination A/C Title</string>
    <string name="transfer_amount">Transfer Amount</string>
    <string name="otp_verification_code">OTP</string>
    <string name="hint_otp">Enter OTP here</string>
    <string name="btn_complete">Complete</string>
    <string name="amount_20000">20,000</string>
    <string name="amount_20000_bangla">২০,০০০</string>
    <string name="amount_10000">10,000</string>
    <string name="amount_10000_bangla">১০,০০০</string>
    <string name="amount_100000">1,00,000</string>
    <string name="amount_100000_bangla">১,০০,০০০</string>
    <string name="amount_50000">50,000</string>
    <string name="amount_50000_bangla">৫০,০০০</string>
    <string name="amount_5000">5,000</string>
    <string name="amount_5000_bangla">৫,০০০</string>
    <string name="amount_1000">1,000</string>
    <string name="amount_1000_bangla">১,০০০</string>
    <string name="amount_500">500</string>
    <string name="amount_500_bangla">৫০০</string>
    <string name="amout">Amount</string>
    <string name="hints_amout">Enter Amount</string>
    <string name="remark">Remarks</string>
    <string name="hints_remark">Enter Remarks</string>
    <string name="destination_type">Destination Type</string>
    <string name="account_label">Account</string>
    <string name="bank_name">Bank Name</string>
    <string name="bank_name_des"></string>
    <string name="branch_name">Branch Name</string>
    <string name="bank_branch_des"></string>
    <string name="destination_bank">Destination Bank</string>
    <string name="destination_branch">Destination Branch</string>
    <string name="success_message">Transaction is Successful!</string>
    <string name="btn_go_bac">Go back</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="postpaid">Postpaid</string>
    <string name="prepaid">Prepaid</string>
    <string name="btn_50">50</string>
    <string name="btn_50_bangla">৫০</string>
    <string name="btn_100">100</string>
    <string name="btn_100_bangla">১০০</string>
    <string name="btn_150">150</string>
    <string name="btn_150_bangla">১৫০</string>
    <string name="btn_200">200</string>
    <string name="btn_200_bangla">২০০</string>
    <string name="accoutn_password">Password</string>
    <string name="hint_accoutn_password">Enter password here</string>
    <string name="number">01921687433</string>
    <string name="operator">Operator</string>
    <string name="grameenphone">GrameenPhone</string>
    <string name="btn_confirm">Confirm</string>
    <string name="select_select_operator">Select Operator</string>
    <string name="destination_mobile_number">Destination Mobile</string>
    <string name="date">Date</string>
    <string name="balance">Balance</string>
    <string name="saving">Savings account</string>
    <string name="account_number">Account Number</string>
    <string name="log_out_label">Log out</string>
    <string name="log_out_label_ban">লগ আউট</string>
    <string name="log_out_title">Thank you for using Smart App.Do you want to logout?</string>
    <string name="log_out_ok">Yes</string>
    <string name="log_out_cancel">No</string>
    <string name="account_details">Account(s) Details</string>
    <string name="account_statement">Account(s) Statement</string>
    <string name="account_detail_acnumber">A/C Number</string>
    <string name="account_type">A/C Type</string>
    <string name="currency">Currency</string>
    <string name="account_detail_title">A/C Title</string>
    <string name="splash_welcome">Welcome to</string>
    <string name="tv_splash_smart_app">Smart App</string>
    <string name="splash_by_bank_asia">Bank Asia</string>
    <string name="today">Today</string>
    <string name="last_week">Last Week</string>
    <string name="last_month">Last Month</string>
    <string name="btn_serach">Search</string>
    <string name="or">OR</string>
    <string name="from_date">From Date</string>
    <string name="to_date">To Date</string>
    <string name="debit_amount">Debit Amount</string>
    <string name="credit_amount">Credit Amount</string>
    <string name="particulars">Particulars</string>
    <string name="account_statement_pdf_title">Account Statement</string>
    <string name="account_statement_pdf_sl_no">SL No.</string>
    <string name="setting_user_id_change_request">User ID Change Request</string>
    <string name="setting_user_id_change_confirmation">User ID Change Confirmation</string>
    <string name="setting_password_change">Password Change</string>
    <string name="setting_view_sign_in_status">View Sign In Status</string>
    <string name="terms_condition"> <u> terms &amp; conditions</u></string>
    <string name="bkash_wallet">bKash Wallet Number</string>
    <string name="bkash_wallet_title">bKash Wallet Title</string>
    <string name="select_bkash_account">bKash Wallet Number</string>
    <string name="go_back_to_home">Go Back To Home</string>
    <string name="hints_bkash">bKash Wallet Number</string>
    <string name="btn_submit">Submit</string>
    <string name="bkash_view_account_no">bKash Wallet No.</string>
    <string name="status">Status</string>
    <string name="select_status">Status</string>
    <string name="notification_channel_id">eraapps.bankasia.bdinternetbanking.smartapp</string>
    <string name="notifications_admin_channel_name">SMARTAPP</string>
    <string name="notifications_admin_channel_description">BA-SMART-APP</string>
    <string name="select_npsn_add_account_type">Select Destination Type</string>
    <string name="select_npsn_add_account">Destination Type</string>
    <string name="select_npsn_bank">Bank Name</string>
    <string name="select_npsn_branch">Branch Name</string>
    <string name="hints_account_no">Account/Card No</string>
    <string name="hints_account_card_title">Account/Card Title</string>
    <string name="enter_mobile_number_bangla">মোবাইল নাম্বার লিখুন </string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="effective_date">Effective Date</string>
    <string name="payee_id">Payee ID</string>
    <string name="hints_payee_id">Enter Payee ID</string>
    <string name="shadhin_card_number">Shadhin Card Number</string>
    <string name="hints_shadhin_card_number">Enter Shadhin Card Number</string>
    <string name="payoneer_terms_privacy"><![CDATA[I want to registered my payoneer account to Bank Asia Account for fund transfer, check balance & view history]]></string>
    <string name="payoneer_terms_privacy_for_payment"><![CDATA[I understand that I am debiting my account to transfer the amount to my account/card in Bank Asia through this app.]]></string>
    <string name="ok">ok</string>
    <string name="cancel">Cancel</string>
    <string name="year">Year</string>
    <string name="month">Month</string>
    <string name="select_leaves">Leaves</string>
    <string name="select_reason">Reason</string>
    <string name="select_all_leaves">ALL Leaves</string>
    <string name="select_leave_type">Leaf Type</string>
    <string name="slno">SL</string>
    <string name="status_date">Status Date</string>
    <string name="leaf_no">Leaf No.</string>
    <string name="transaction_date">Transaction Date</string>
    <string name="transaction_type">Transaction Type</string>
    <string name="account_no">Account No.</string>
    <string name="account_title">Account Title</string>
    <string name="enter_bill_number">Enter Bill Number</string>
    <string name="bill_number">Bill Number</string>
    <string name="enter_customer_code">Enter Customer Code</string>
    <string name="customer_code">Customer Code</string>
    <string name="payoneer_account_balance">Payoneer A/C. Balance</string>
    <string name="free">Fee</string>
    <string name="server_unrechable_error">Server Is Unreachable.Please try again..</string>
    <string name="payoneer_description">Description</string>
    <string name="virtual_amount">Virtual Amount</string>
    <string name="audit_id">Audit ID</string>
    <string name="otp_oldPassword">Old Password</string>
    <string name="hint_old_password">Enter Old Password</string>
    <string name="hint_new_password">Enter New Password</string>
    <string name="new_password">New Password</string>
    <string name="hint_confirm_password">Enter Confirm Password</string>
    <string name="new_confirm_password">Confirm Password</string>
    <string name="user_expire_dayys">Expired Days</string>
    <string name="visa_select_payament">Select Payment</string>
    <string name="visa_scan_to_pay">Scan to Pay</string>
    <string name="visa_hold_camer">Hold your camera on  QR code to pay to merchant.</string>
    <string name="visa_confirm_payment">Confirm Payment</string>
    <string name="visa_mn">MN</string>
    <string name="change_card">Change</string>
    <string name="visa_withdraw_amount">Merchant Payment Amount</string>
    <string name="visa_inr">BD</string>
    <string name="btn_visa_submit">Pay BDT</string>
    <string name="visa_add_card">Add Card</string>
    <string name="visa_sent">Sent</string>
    <string name="visa_total_payment_amount">Total Payment Amount</string>
    <string name="visa_paid_with">Paid with</string>
    <string name="visa_payment_type">Payment Type</string>
    <string name="visa_locatoin">Location</string>
    <string name="dhaka">Dhaka</string>
    <string name="visa_transaction">Transaction ID</string>
    <string name="visa_digital_receipt">Digital Receipt</string>
    <string name="payment_sent">Payment sent</string>
    <string name="thanks">Thank You!</string>
    <string name="thanks_message">Your transaction is successful</string>
    <string name="emon_raihan">Emon Raihan</string>
    <string name="_01816028491">01816028491</string>
    <string name="emonrait_gmail_com">emonrait@gmail.com</string>
</resources>