<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.emon.raihan.messmanagement.view.welcome.fragment.Home"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.emon.raihan.messmanagement.view.welcome.fragment.Notification"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notification" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.emon.raihan.messmanagement.view.welcome.fragment.MealHistory"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_meal_history" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.emon.raihan.messmanagement.view.welcome.fragment.Developer"
        android:label="@string/title_setting"
        tools:layout="@layout/fragment_developer" />


</navigation>