<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:baselineAligned="false"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="6dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            android:orientation="horizontal"
            android:padding="5dp"
            android:weightSum="4">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:id="@+id/profilename"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="casual"
                    android:text="@string/emon_raihan"
                    android:textColor="#111111"
                    android:textSize="20dp"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/profilemobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableRight="@drawable/ic_call"
                    android:fontFamily="casual"
                    android:text="@string/_01816028491"
                    android:textColor="#52baff"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/profileemail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableRight="@drawable/ic_location"
                    android:fontFamily="casual"
                    android:text="@string/emonrait_gmail_com"
                    android:textColor="#52baff"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="center"
                android:padding="5dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profilepic"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/ic_location"
                    app:civ_border_color="#000000"
                    app:civ_border_width="2dp" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>

