<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_splash_screen"
    android:orientation="vertical"
    tools:context=".view.homepage.SplashActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="4.5"
        android:gravity="center">


        <androidx.cardview.widget.CardView
            android:layout_width="@dimen/spash_screen_icon_image_height_base"
            android:layout_height="@dimen/spash_screen_icon_image_height_base"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_10"
            app:cardCornerRadius="@dimen/margin_10">

            <ImageView
                android:id="@+id/iv_bank_asia_icon"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:scaleType="fitXY"
                android:src="@drawable/ic_launcher_background" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="3.5"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_splash_welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/splash_welcome"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:paddingRight="@dimen/padding_5">

                <ImageView
                    android:id="@+id/iv_bank_asia"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_launcher_background" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center">

                <TextView
                    android:id="@+id/by_bank_asia"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/splash_by_emon_raihan"
                    android:textColor="@android:color/black"
                    android:textSize="42sp" />
            </LinearLayout>


        </LinearLayout>


        <TextView
            android:id="@+id/tv_smarpt_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="-5dp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="25sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="2"
        android:gravity="center">

        <androidx.core.widget.ContentLoadingProgressBar
            android:id="@+id/prgressbar_id"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:indeterminate="true"
            android:indeterminateDrawable="@drawable/custom_progress_bar_horizontal"
            android:theme="@style/Widget.AppCompat.ProgressBar.Horizontal" />
    </LinearLayout>

</LinearLayout>